more files that need to be separated out

--- a/nginx.conf
+++ b/nginx.conf
@@ -9,9 +9,9 @@ map $http_upgrade $connection_upgrade {
 
 server {
     listen 443 ssl;
-    server-name YOUR_RANCHER_INSTANCE_NAME.domain_name
-    ssl\_certificate  /etc/nginx/ssl/NAME_OF_YOUR_CERTIFICATE.crt 
-    ssl\_certificate\_key  /etc/nginx/ssl/NAME_OF_YOUR_KEY.key
+    server-name YOUR_RANCHER_INSTANCE_NAME.DOMAIN_NAME
+    ssl\_certificate  /etc/nginx/ssl/gameswithwords.crt 
+    ssl\_certificate\_key  /etc/nginx/ssl/gameswithwords.key
 
     access_log /var/log/nginx/access.log;
     error_log  /var/log/nginx/error.log;
